fix color scheme on mobile team page, adjust sizing of team on mobile

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1524,10 +1524,6 @@ for all other rows the portrait image wraps above bio*/
     .team-right-text {
         width: 100%;
     }
-    .team-left-image,
-    .team-right-image {
-        width: 60%;
-    }
     .team-center-space {
         display: none;
     }
